--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Run the app's binary
         run: |
-          chmod +x ./dist/spy_ema_chad.app/Contents/MacOS/MyApp
-          ./dist/spy_ema_chad.app/Contents/MacOS/MyApp > output.log 2>&1
+          chmod +x ./dist/MacApp.app/Contents/MacOS/MyApp
+          ./dist/MacApp.app/Contents/MacOS/MyApp > output.log 2>&1
 
       - name: Upload output log
         uses: actions/upload-artifact@v4
