--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Run the app's binary
         run: |
           chmod +x ./dist/MacApp.app/Contents/MacOS/MacApp
+          trap 'echo "::warning::App interrupted. Dumping partial log..."; cat output.log' SIGINT SIGTERM
           ./dist/MacApp.app/Contents/MacOS/MacApp > output.log 2>&1
 
       - name: Upload output log
