--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install py2app --no-strip
+          pip install py2app
 
       - name: Build .app with py2app
-        run: python setup.py py2app
+        run: python setup.py py2app --no-strip
 
       - name: Upload .app bundle
         uses: actions/upload-artifact@v4
