--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -22,6 +22,8 @@ jobs:
           rm -rf build dist venv_x86
           arch -x86_64 python3 -m venv venv_x86
           source venv_x86/bin/activate
+          arch -x86_64 pip install --upgrade pip setuptools wheel
+          arch -x86_64 pip install --only-binary=:all: numpy pandas
           arch -x86_64 pip install -r requirements.txt
           arch -x86_64 pip install py2app
 
