--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -19,18 +19,13 @@ jobs:
 
       - name: Build .app with py2app
         run: |
-          rm -rf ./build ./dist ./venv_x86 *.egg-info
-          arch -x86_64 python3 -m venv venv_x86
-          source venv_x86/bin/activate
-          arch -x86_64 pip install --upgrade pip setuptools wheel
-          arch -x86_64 pip install numpy==1.26.4  # Specify a stable version
-          arch -x86_64 pip install pandas==2.2.1  # Specify a stable version
-          arch -x86_64 pip install -r requirements.txt
-          arch -x86_64 pip install py2app
-          # Make sure numpy is properly installed outside its source directory
-          arch -x86_64 python -c "import numpy; print(numpy.__version__); print(numpy.__file__)"
-          arch -x86_64 python setup.py clean --all
-          arch -x86_64 python setup.py py2app --no-strip
+          pip install --upgrade pip setuptools wheel
+          pip install numpy==1.26.4  # Specify a stable version
+          pip install pandas==2.2.1  # Specify a stable version
+          pip install -r requirements.txt
+          pip install py2app
+          python setup.py clean --all
+          python setup.py py2app --no-strip
 
 
       - name: Upload .app bundle
