standardize ports across strategy tickers

--- a/config.yaml
+++ b/config.yaml
@@ -1,31 +1,208 @@
-# SPY Trading Strategies Configuration
-# Configuration for running multiple SPY trading strategies in parallel
+# Trading Strategies Configuration
+# Always buy nearest strike price OTM and nearest DTE.
+# Sell half the position at each profit target and exit fully if any stop loss triggers.
 
 strategies:
-  bosk:
-    enabled: true
-    script: "spy_bosk_strategy.py"
-    args:
-      ticker: "SPY"
-      contracts: 2
-      underlying_move_target: 1.0
-      itm_offset: 1.05
-      paper_trading: true
-      port: 7497
-
-  orb:
+  spy_orb:
     enabled: true
     script: "spy_orb_strategy.py"
     args:
       ticker: "SPY"
       contracts: 2
-      underlying_move_target: 1.0
+      underlying_move_target: 1.55  # 1 ITM + $0.05 from strike
+      itm_offset: 2.05               # 2 ITM + $0.05 from strike
+      paper_trading: true
+      port: 7498
+
+  spx_orb:
+    enabled: false
+    script: "spy_orb_strategy.py"
+    args:
+      ticker: "SPX"
+      contracts: 1
+      underlying_move_target: 2.25  # 2 ITM + $0.25 from strike
+      itm_offset: 4.25               # 4 ITM + $0.25 from strike
+      paper_trading: true
+      port: 7498
+
+  qqq_orb:
+    enabled: false
+    script: "spy_orb_strategy.py"
+    args:
+      ticker: "QQQ"
+      contracts: 2
+      underlying_move_target: 1.55  # same as SPY
+      itm_offset: 2.05
+      paper_trading: true
+      port: 7498
+
+  nvda_orb:
+    enabled: false
+    script: "spy_orb_strategy.py"
+    args:
+      ticker: "NVDA"
+      contracts: 2
+      underlying_move_target: 0.50  # ATM + $0.02 with $0.50 minimum move
+      itm_offset: 1.02
+      paper_trading: true
+      port: 7498
+
+  tsla_orb:
+    enabled: false
+    script: "spy_orb_strategy.py"
+    args:
+      ticker: "TSLA"
+      contracts: 2
+      underlying_move_target: 2.05  # ATM + $0.15 with $1.00 minimum move
+      itm_offset: 1.05               # 1 ITM + $0.05
+      paper_trading: true
+      port: 7498
+
+  iwm_orb:
+    enabled: false
+    script: "spy_orb_strategy.py"
+    args:
+      ticker: "IWM"
+      contracts: 2
+      underlying_move_target: 0.50  # same as NVDA
+      itm_offset: 1.02
+      paper_trading: true
+      port: 7498
+
+  spy_rev:
+    enabled: false
+    script: "spy_rev_strategy.py"
+    args:
+      ticker: "SPY"
+      contracts: 2
+      underlying_move_target: 0.80  # ATM + $0.05 with $0.80 minimum move
+      itm_offset: 2.05               # 2 ITM + $0.05
+      paper_trading: true
+      port: 7499
+
+  spx_rev:
+    enabled: false
+    script: "spy_rev_strategy.py"
+    args:
+      ticker: "SPX"
+      contracts: 1
+      underlying_move_target: 2.25  # 2 ITM + $0.25
+      itm_offset: 4.25               # 4 ITM + $0.25
+      paper_trading: true
+      port: 7499
+
+  qqq_rev:
+    enabled: false
+    script: "spy_rev_strategy.py"
+    args:
+      ticker: "QQQ"
+      contracts: 2
+      underlying_move_target: 0.80  # same as SPY
+      itm_offset: 2.05
+      paper_trading: true
+      port: 7499
+
+  tsla_rev:
+    enabled: false
+    script: "spy_rev_strategy.py"
+    args:
+      ticker: "TSLA"
+      contracts: 2
+      underlying_move_target: 2.00  # ATM + $0.15 with $1.00 minimum move
       itm_offset: 1.05
       paper_trading: true
-      port: 7498  # Different port to avoid conflicts
+      port: 7499
+
+  iwm_rev:
+    enabled: false
+    script: "spy_rev_strategy.py"
+    args:
+      ticker: "IWM"
+      contracts: 2
+      underlying_move_target: 0.60  # ATM + $0.02 with $0.60 minimum move
+      itm_offset: 1.02
+      paper_trading: true
+      port: 7499
+
+  spy_bosk:
+    enabled: true
+    script: "spy_bosk_strategy.py"
+    args:
+      ticker: "SPY"
+      contracts: 2
+      underlying_move_target: 0.80  # ATM + $0.05 with $0.80 minimum move
+      itm_offset: 2.05               # 2 ITM + $0.05
+      paper_trading: true
+      port: 7497
+
+  spx_bosk:
+    enabled: false
+    script: "spy_bosk_strategy.py"
+    args:
+      ticker: "SPX"
+      contracts: 1
+      underlying_move_target: 2.25
+      itm_offset: 4.25
+      paper_trading: true
+      port: 7497
+
+  qqq_bosk:
+    enabled: false
+    script: "spy_bosk_strategy.py"
+    args:
+      ticker: "QQQ"
+      contracts: 2
+      underlying_move_target: 0.85
+      itm_offset: 1.05
+      paper_trading: true
+      port: 7497
+
+  nvda_bosk:
+    enabled: false
+    script: "spy_bosk_strategy.py"
+    args:
+      ticker: "NVDA"
+      contracts: 2
+      underlying_move_target: 0.50
+      itm_offset: 1.01
+      paper_trading: true
+      port: 7497
+
+  tsla_bosk:
+    enabled: false
+    script: "spy_bosk_strategy.py"
+    args:
+      ticker: "TSLA"
+      contracts: 2
+      underlying_move_target: 1.25
+      itm_offset: 1.05
+      paper_trading: true
+      port: 7497
+
+  amzn_bosk:
+    enabled: false
+    script: "spy_bosk_strategy.py"
+    args:
+      ticker: "AMZN"
+      contracts: 2
+      underlying_move_target: 1.05
+      itm_offset: 2.10
+      paper_trading: true
+      port: 7497
+
+  iwm_bosk:
+    enabled: false
+    script: "spy_bosk_strategy.py"
+    args:
+      ticker: "IWM"
+      contracts: 2
+      underlying_move_target: 0.50
+      itm_offset: 1.00
+      paper_trading: true
+      port: 7497
 
 # Global settings
 global:
   log_level: "INFO"
   max_retries: 3
-  restart_on_failure: true 
+  restart_on_failure: true
