--- a/config.yaml
+++ b/config.yaml
@@ -70,7 +70,7 @@ strategies:
       port: 7498
 
   spy_rev:
-    enabled: false
+    enabled: true
     script: "spy_rev_strategy.py"
     args:
       ticker: "SPY"
